tests/neg-custom-args/captures/lazyvals4.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals4.scala:21:39 ------------------------------------
21 |  val v0:  () -> () -> String        = () => t.memberLazy     // error
   |                                       ^^^^^^^^^^^^^^^^^^
   |                                       Found:    () ->{t} () -> String
   |                                       Required: () -> () -> String
   |
   |                                       Note that capability `t` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals4.scala:23:39 ------------------------------------
23 |  val v1:  () -> String              = () => t.memberLazy()   // error
   |                                       ^^^^^^^^^^^^^^^^^^^^
   |                                       Found:    () ->{t} String
   |                                       Required: () -> String
   |
   |                                       Note that capability `t` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals4.scala:25:39 ------------------------------------
25 |  val v3: (() -> String)^{c.console} = () => c.memberLazy()   // error (but should this be allowed?)
   |                                       ^^^^^^^^^^^^^^^^^^^^
   |                                       Found:    () ->{c} String
   |                                       Required: () ->{c.console} String
   |
   |                                       Note that capability `c` is not included in capture set {c.console}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals4.scala:26:39 ------------------------------------
26 |  val v4:  () -> String              = () => t.memberMethod() // error
   |                                       ^^^^^^^^^^^^^^^^^^^^^^
   |                                       Found:    () ->{t} String
   |                                       Required: () -> String
   |
   |                                       Note that capability `t` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
